9章課題問題

--- a/ch9_exercise.css
+++ b/ch9_exercise.css
@@ -61,3 +61,17 @@
 .title {
 	padding: 10px 0;
 }
+
+@media screen and (max-width: 768px) {
+	.contents {
+		width: 90%;
+	}
+
+	.content-item {
+		margin-top: 20px;
+	}
+
+	.content-item:first-child {
+		margin-top: 0;
+	}
+}
